--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
     <title>Video</title>
   </head>
   <body>
-    <video id="videoPlayer" controls>
-      <source src="http://localhost:4000/video" type="video/mp4" />
-    </video>
+    <video controls autoplay></video>
+    <script src="./js/index.js"></script>
   </body>
 </html>
