made changes to hardcoded urls

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
     <title>Video</title>
   </head>
   <body>
-    <video controls autoplay></video>
-    <script src="./js/index.js"></script>
+    <div id="video"></div>
+
+    <script id="video-template" type="text/html">
+      <video id="video" src="http://{{url}}:4000/video" controls></video>
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
